Live report email added

--- a/EMSRS-forms.html
+++ b/EMSRS-forms.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -570,23 +570,23 @@
   <div class="content-panel">
     <h1>EMSRS Forms</h1>
     <ul>
-      <li><a href="Forms/WVAF0010.pdf" target="_blank">Application for Scholarship</a></li>
-      <li><a href="Forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
-      <li><a href="Forms/WVEF0605.pdf" target="_blank">Benefit Estimate Request</a></li>
+      <li><a href="forms/WVAF0010.pdf" target="_blank">Application for Scholarship</a></li>
+      <li><a href="forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
+      <li><a href="forms/WVEF0605.pdf" target="_blank">Benefit Estimate Request</a></li>
       <li><a href="forms/ConfidentialRecordsOrder.pdf" target="_blank">Confidential Records Order</a></li>
-      <li><a href="Forms/Employee-of-the-Month-Nomination.pdf" target="_blank">Employee of the Month Nomination Form</a></li>
-      <li><a href="Forms/WVEF0250.pdf" target="_blank">Insurable Interest Affidavit</a></li>
-      <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
-      <li><a href="Forms/WVEF0002.pdf" target="_blank">Membership Enrollment</a></li>
-      <li><a href="Forms/WVAF0002.pdf" target="_blank">Online Self-Service Get Started Guide</a></li>
-      <li><a href="Forms/WVEF0080.pdf" target="_blank">Pre-Retirement Beneficiary Designation</a></li>
+      <li><a href="forms/Employee-of-the-Month-Nomination.pdf" target="_blank">Employee of the Month Nomination Form</a></li>
+      <li><a href="forms/WVEF0250.pdf" target="_blank">Insurable Interest Affidavit</a></li>
+      <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+      <li><a href="forms/WVEF0002.pdf" target="_blank">Membership Enrollment</a></li>
+      <li><a href="forms/WVAF0002.pdf" target="_blank">Online Self-Service Get Started Guide</a></li>
+      <li><a href="forms/WVEF0080.pdf" target="_blank">Pre-Retirement Beneficiary Designation</a></li>
       <li><a href="forms/EMSRS-QDRO.pdf" target="_blank">Qualified Domestic Relations Order (QDRO)</a></li>
       <li><a href="forms/requestdisability.pdf" target="_blank">Request for Disability Packet</a></li>
-      <li><a href="Forms/Svc-Credit-rollover.pdf" target="_blank">Request to Purchase Permissive Service Credit (Rollover)</a></li>
-      <li><a href="Forms/EMSRS-911transfer.pdf" target="_blank">Quote for Additional Contributions &amp; Interest Due on Transferred 911 Service</a></li>
-      <li><a href="Forms/WVAF0008-2025.pdf" target="_blank">PSO Insurance Premium Deduction Authorization (PSOA-2025)</a></li>
-      <li><a href="Forms/WVAF0009.pdf" target="_blank">Retired Public Safety Officer Insurance Carrier (ICA)</a></li>
-      <li><a href="Forms/WV-PoA.pdf" target="_blank">Statutory Power of Attorney</a></li>
+      <li><a href="forms/Svc-Credit-rollover.pdf" target="_blank">Request to Purchase Permissive Service Credit (Rollover)</a></li>
+      <li><a href="forms/EMSRS-911transfer.pdf" target="_blank">Quote for Additional Contributions &amp; Interest Due on Transferred 911 Service</a></li>
+      <li><a href="forms/WVAF0008-2025.pdf" target="_blank">PSO Insurance Premium Deduction Authorization (PSOA-2025)</a></li>
+      <li><a href="forms/WVAF0009.pdf" target="_blank">Retired Public Safety Officer Insurance Carrier (ICA)</a></li>
+      <li><a href="forms/WV-PoA.pdf" target="_blank">Statutory Power of Attorney</a></li>
     </ul>
   </div>
   <!-- STICKY FOOTER AT THE BOTTOM -->
@@ -599,7 +599,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
