--- a/Employers-Tier2.html
+++ b/Employers-Tier2.html
@@ -378,7 +378,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -492,7 +492,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -537,8 +537,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -572,12 +572,12 @@
       <h2>2015 PERS Tier II Resources</h2>
       <ul>
         <li>
-          <a href="Forms/2015-WEB-PERS-State.pdf" target="_blank">
+          <a href="forms/2015-WEB-PERS-State.pdf" target="_blank">
             2015 PERS State Tier II Retirement Benefits Webinar Presentation
           </a>
         </li>
         <li>
-          <a href="Forms/2015-WEB-PERSNon-State.pdf" target="_blank">
+          <a href="forms/2015-WEB-PERSNon-State.pdf" target="_blank">
             2015 PERS Non-State Tier II Retirement Benefits Webinar Presentation
           </a>
         </li>
@@ -585,7 +585,7 @@
       <h2>2015 TRS Tier II Resources</h2>
       <ul>
         <li>
-          <a href="Forms/2015-WEBINAR-TRS.pdf" target="_blank">
+          <a href="forms/2015-WEBINAR-TRS.pdf" target="_blank">
             2015 TRS Tier II Retirement Benefits Webinar Presentation
           </a>
         </li>
@@ -603,7 +603,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
