--- a/GASB68-PERS.html
+++ b/GASB68-PERS.html
@@ -383,7 +383,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -497,7 +497,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -542,8 +542,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -580,12 +580,12 @@
       <h2>2024</h2>
       <ul>
         <li>
-          <a href="Forms/PERS-2024-Amort.pdf" target="_blank">
+          <a href="forms/PERS-2024-Amort.pdf" target="_blank">
             PERS Amortization of Change in Proportionate Share
           </a>
         </li>
         <li>
-          <a href="Forms/PERS-2024-AuditSch.pdf" target="_blank">
+          <a href="forms/PERS-2024-AuditSch.pdf" target="_blank">
             PERS Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2024
           </a>
         </li>
@@ -595,12 +595,12 @@
       <h2>2023</h2>
       <ul>
         <li>
-          <a href="Forms/PERS-2023-Amort.pdf" target="_blank">
+          <a href="forms/PERS-2023-Amort.pdf" target="_blank">
             PERS Amortization of Change in Proportionate Share
           </a>
         </li>
         <li>
-          <a href="Forms/PERS-2023-AuditSch.pdf" target="_blank">
+          <a href="forms/PERS-2023-AuditSch.pdf" target="_blank">
             PERS Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2023
           </a>
         </li>
@@ -610,12 +610,12 @@
       <h2>2022</h2>
       <ul>
         <li>
-          <a href="Forms/PERS-2022-Amort.pdf" target="_blank">
+          <a href="forms/PERS-2022-Amort.pdf" target="_blank">
             PERS Amortization of Change in Proportionate Share
           </a>
         </li>
         <li>
-          <a href="Forms/PERS-2022-AuditSch.pdf" target="_blank">
+          <a href="forms/PERS-2022-AuditSch.pdf" target="_blank">
             PERS Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2022
           </a>
         </li>
@@ -625,12 +625,12 @@
       <h2>2021</h2>
       <ul>
         <li>
-          <a href="Forms/PERS-2021-GASB68-Amort.pdf" target="_blank">
+          <a href="forms/PERS-2021-GASB68-Amort.pdf" target="_blank">
             PERS Amortization of Change in Proportionate Share
           </a>
         </li>
         <li>
-          <a href="Forms/PERS-2021-AuditSch.pdf" target="_blank">
+          <a href="forms/PERS-2021-AuditSch.pdf" target="_blank">
             PERS Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2021
           </a>
         </li>
@@ -640,12 +640,12 @@
       <h2>2020</h2>
       <ul>
         <li>
-          <a href="Forms/PERS-2020-GASB68-Amort.pdf" target="_blank">
+          <a href="forms/PERS-2020-GASB68-Amort.pdf" target="_blank">
             PERS Amortization of Change in Proportionate Share
           </a>
         </li>
         <li>
-          <a href="Forms/PERS-2020-AuditSched.pdf" target="_blank">
+          <a href="forms/PERS-2020-AuditSched.pdf" target="_blank">
             PERS Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2020
           </a>
         </li>
@@ -655,12 +655,12 @@
       <h2>2019</h2>
       <ul>
         <li>
-          <a href="Forms/PERS-2019-GASB68-Amort.pdf" target="_blank">
+          <a href="forms/PERS-2019-GASB68-Amort.pdf" target="_blank">
             PERS Amortization of Change in Proportionate Share
           </a>
         </li>
         <li>
-          <a href="Forms/PERS-2019-AuditSch.pdf" target="_blank">
+          <a href="forms/PERS-2019-AuditSch.pdf" target="_blank">
             PERS Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2019
           </a>
         </li>
@@ -670,12 +670,12 @@
       <h2>2018</h2>
       <ul>
         <li>
-          <a href="Forms/PERS-2018AmortPension.pdf" target="_blank">
+          <a href="forms/PERS-2018AmortPension.pdf" target="_blank">
             PERS Amortization of Change in Proportionate Share
           </a>
         </li>
         <li>
-          <a href="Forms/PERS-2018-AuditSch.pdf" target="_blank">
+          <a href="forms/PERS-2018-AuditSch.pdf" target="_blank">
             PERS Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2018
           </a>
         </li>
@@ -685,12 +685,12 @@
       <h2>2017</h2>
       <ul>
         <li>
-          <a href="Forms/PERS-2017-ACPSNPL.pdf" target="_blank">
+          <a href="forms/PERS-2017-ACPSNPL.pdf" target="_blank">
             PERS Amortization of Change in Proportionate Share
           </a>
         </li>
         <li>
-          <a href="Forms/PERS-2017-GASB68.pdf" target="_blank">
+          <a href="forms/PERS-2017-GASB68.pdf" target="_blank">
             PERS Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2017
           </a>
         </li>
@@ -700,12 +700,12 @@
       <h2>2016</h2>
       <ul>
         <li>
-          <a href="Forms/PERS2016-ACPSNPL.pdf" target="_blank">
+          <a href="forms/PERS2016-ACPSNPL.pdf" target="_blank">
             PERS Amortization of Change in Proportionate Share
           </a>
         </li>
         <li>
-          <a href="Forms/2016PERS-AllocationSchedules.pdf" target="_blank">
+          <a href="forms/2016PERS-AllocationSchedules.pdf" target="_blank">
             PERS Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2016
           </a>
         </li>
@@ -715,12 +715,12 @@
       <h2>2015</h2>
       <ul>
         <li>
-          <a href="Forms/2015PERSEmployerChangeInProportionateShareSchedule.pdf" target="_blank">
+          <a href="forms/2015PERSEmployerChangeInProportionateShareSchedule.pdf" target="_blank">
             2015 PERS Amortization Schedule by Employer
           </a>
         </li>
         <li>
-          <a href="Forms/2015-PERSAllocation.pdf" target="_blank">
+          <a href="forms/2015-PERSAllocation.pdf" target="_blank">
             2015 PERS Audit Schedule of Allocations & Pension Amounts
           </a>
         </li>
@@ -730,12 +730,12 @@
       <h2>2013–2014</h2>
       <ul>
         <li>
-          <a href="Forms/2014PERSEmployerChangeInProportionateShareSchedule.pdf" target="_blank">
+          <a href="forms/2014PERSEmployerChangeInProportionateShareSchedule.pdf" target="_blank">
             2013–14 PERS Amortization Schedule by Employer
           </a>
         </li>
         <li>
-          <a href="Forms/2014-GASB68-PERS.pdf" target="_blank">
+          <a href="forms/2014-GASB68-PERS.pdf" target="_blank">
             2013–14 PERS Audit Schedule of Allocations & Pension Amounts
           </a>
         </li>
@@ -752,7 +752,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
