--- a/News15.html
+++ b/News15.html
@@ -50,6 +50,7 @@
       background: #fff; box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       padding: 7px 20px; position: relative; z-index: 99;
     }
+    
     .main-menu { list-style: none; display: flex; gap: 16px; align-items: center; margin: 0; padding: 0; flex-wrap: wrap;}
     .main-menu li { position: relative; }
     .main-menu > li > a {
@@ -312,7 +313,7 @@
               <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
               <li><a href="Publications.html#Brochures">Brochures</a></li>
               <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-              <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+              <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -421,7 +422,7 @@
               <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
               <li><a href="Publications.html#Brochures">Brochures</a></li>
               <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-              <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+              <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
             </ul>
           </li>
         </ul>
@@ -467,8 +468,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -536,7 +537,7 @@
         for general guidance only. In the event of any discrepancy between this site and
         the WV Code & Rules, the Code & Rules prevail. |
         <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-        <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+              <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
       </div>
     </div>
   </footer>
