--- a/Publications.html
+++ b/Publications.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -584,70 +584,70 @@
 
     <h2>Annual Comprehensive Financial Report (ACFR)</h2>
     <ul>
-      <li><a href="Forms/2012-CompAnFinR.pdf" target="_blank">FY 2012 (and FY 2011)</a></li>
-      <li><a href="Forms/2013-CompAnFinR.pdf" target="_blank">FY 2013 (and FY 2012)</a></li>
-      <li><a href="Forms/2014-CompAnFinR.pdf" target="_blank">FY 2014 (and FY 2013)</a></li>
-      <li><a href="Forms/2015-CompAnFinR.pdf" target="_blank">FY 2015 (and FY 2014)</a></li>
-      <li><a href="Forms/2016-CompAnFinR.pdf" target="_blank">FY 2016 (and FY 2015)</a></li>
-      <li><a href="Forms/2017-CompAnFinR.pdf" target="_blank">FY 2017 (and FY 2016)</a></li>
-      <li><a href="Forms/2018-CompAnFinR.pdf" target="_blank">FY 2018 (and FY 2017)</a></li>
-      <li><a href="Forms/2019-CompAnFinR.pdf" target="_blank">FY 2019 (and FY 2018)</a></li>
-      <li><a href="Forms/2020-CompAnFinR.pdf" target="_blank">FY 2020</a></li>
-      <li><a href="Forms/2021-ACFR.pdf" target="_blank">FY 2021</a></li>
-      <li><a href="Forms/2022-ACFR.pdf" target="_blank">FY 2022</a></li>
-      <li><a href="Forms/2023-ACFR.pdf" target="_blank">FY 2023</a></li>
-      <li><a href="Forms/2024-ACFR.pdf" target="_blank">FY 2024</a></li>
+      <li><a href="forms/2012-CompAnFinR.pdf" target="_blank">FY 2012 (and FY 2011)</a></li>
+      <li><a href="forms/2013-CompAnFinR.pdf" target="_blank">FY 2013 (and FY 2012)</a></li>
+      <li><a href="forms/2014-CompAnFinR.pdf" target="_blank">FY 2014 (and FY 2013)</a></li>
+      <li><a href="forms/2015-CompAnFinR.pdf" target="_blank">FY 2015 (and FY 2014)</a></li>
+      <li><a href="forms/2016-CompAnFinR.pdf" target="_blank">FY 2016 (and FY 2015)</a></li>
+      <li><a href="forms/2017-CompAnFinR.pdf" target="_blank">FY 2017 (and FY 2016)</a></li>
+      <li><a href="forms/2018-CompAnFinR.pdf" target="_blank">FY 2018 (and FY 2017)</a></li>
+      <li><a href="forms/2019-CompAnFinR.pdf" target="_blank">FY 2019 (and FY 2018)</a></li>
+      <li><a href="forms/2020-CompAnFinR.pdf" target="_blank">FY 2020</a></li>
+      <li><a href="forms/2021-ACFR.pdf" target="_blank">FY 2021</a></li>
+      <li><a href="forms/2022-ACFR.pdf" target="_blank">FY 2022</a></li>
+      <li><a href="forms/2023-ACFR.pdf" target="_blank">FY 2023</a></li>
+      <li><a href="forms/2024-ACFR.pdf" target="_blank">FY 2024</a></li>
     </ul>
 
     <h2>Popular Annual Financial Report (PAFR)</h2>
     <ul>
-      <li><a href="Forms/2019-PAFR.pdf" target="_blank">FY 2019</a></li>
-      <li><a href="Forms/2020-PAFR.pdf" target="_blank">FY 2020</a></li>
-      <li><a href="Forms/2021-PAFR.pdf" target="_blank">FY 2021</a></li>
+      <li><a href="forms/2019-PAFR.pdf" target="_blank">FY 2019</a></li>
+      <li><a href="forms/2020-PAFR.pdf" target="_blank">FY 2020</a></li>
+      <li><a href="forms/2021-PAFR.pdf" target="_blank">FY 2021</a></li>
     </ul>
 
     <h2>Plan Summary Sheet</h2>
     <ul>
-      <li><a href="Forms/2024Statistics.pdf" target="_blank">Summary as of 7/1/2024</a></li>
-      <li><a href="Forms/2023Statistics.pdf" target="_blank">Summary as of 7/1/2023</a></li>
-      <li><a href="Forms/2022Statistics.pdf" target="_blank">Summary as of 7/1/2022</a></li>
-      <li><a href="Forms/2021Statistics.pdf" target="_blank">Summary as of 7/1/2021</a></li>
-      <li><a href="Forms/2020Statistics.pdf" target="_blank">Summary as of 7/1/2020</a></li>
-      <li><a href="Forms/2019Statistics.pdf" target="_blank">Summary as of 7/1/2019</a></li>
-      <li><a href="Forms/2018Statistics.pdf" target="_blank">Summary as of 7/1/2018</a></li>
-      <li><a href="Forms/2017Statistics.pdf" target="_blank">Summary as of 7/1/2017</a></li>
-      <li><a href="Forms/2016Statistics.pdf" target="_blank">Summary as of 7/1/2016</a></li>
-      <li><a href="Forms/2015Statistics.pdf" target="_blank">Summary as of 7/1/2015</a></li>
-      <li><a href="Forms/2014Statistics.pdf" target="_blank">Summary as of 7/1/2014</a></li>
-      <li><a href="Forms/2013Statistics.pdf" target="_blank">Summary as of 7/1/2013</a></li>
-      <li><a href="Forms/Statistics2012.pdf" target="_blank">Summary as of 7/1/2012</a></li>
-      <li><a href="Forms/Statistics2011.pdf" target="_blank">Summary as of 7/1/2011</a></li>
+      <li><a href="forms/2024Statistics.pdf" target="_blank">Summary as of 7/1/2024</a></li>
+      <li><a href="forms/2023Statistics.pdf" target="_blank">Summary as of 7/1/2023</a></li>
+      <li><a href="forms/2022Statistics.pdf" target="_blank">Summary as of 7/1/2022</a></li>
+      <li><a href="forms/2021Statistics.pdf" target="_blank">Summary as of 7/1/2021</a></li>
+      <li><a href="forms/2020Statistics.pdf" target="_blank">Summary as of 7/1/2020</a></li>
+      <li><a href="forms/2019Statistics.pdf" target="_blank">Summary as of 7/1/2019</a></li>
+      <li><a href="forms/2018Statistics.pdf" target="_blank">Summary as of 7/1/2018</a></li>
+      <li><a href="forms/2017Statistics.pdf" target="_blank">Summary as of 7/1/2017</a></li>
+      <li><a href="forms/2016Statistics.pdf" target="_blank">Summary as of 7/1/2016</a></li>
+      <li><a href="forms/2015Statistics.pdf" target="_blank">Summary as of 7/1/2015</a></li>
+      <li><a href="forms/2014Statistics.pdf" target="_blank">Summary as of 7/1/2014</a></li>
+      <li><a href="forms/2013Statistics.pdf" target="_blank">Summary as of 7/1/2013</a></li>
+      <li><a href="forms/Statistics2012.pdf" target="_blank">Summary as of 7/1/2012</a></li>
+      <li><a href="forms/Statistics2011.pdf" target="_blank">Summary as of 7/1/2011</a></li>
       <li><a href="forms/Statistics2010.pdf" target="_blank">Summary as of 7/1/2010</a></li>
-      <li><a href="Forms/PlanStatistics2009.pdf" target="_blank">Summary as of 7/1/2009</a></li>
-      <li><a href="Forms/PlanStatistics2008.pdf" target="_blank">Summary as of 7/1/2008</a></li>
-      <li><a href="Forms/SummarySheet2007.pdf" target="_blank">Summary as of 7/1/2007</a></li>
-      <li><a href="Forms/summarySheet2006.pdf" target="_blank">Summary as of 7/1/2006</a></li>
+      <li><a href="forms/PlanStatistics2009.pdf" target="_blank">Summary as of 7/1/2009</a></li>
+      <li><a href="forms/PlanStatistics2008.pdf" target="_blank">Summary as of 7/1/2008</a></li>
+      <li><a href="forms/SummarySheet2007.pdf" target="_blank">Summary as of 7/1/2007</a></li>
+      <li><a href="forms/summarySheet2006.pdf" target="_blank">Summary as of 7/1/2006</a></li>
     </ul>
 
     <h2>Brochures</h2>
     <ul>
-      <li><a href="Forms/PERSbrochure.pdf" target="_blank">PERS Tier I: Public Employees Retirement System</a></li>
-      <li><a href="Forms/PERS-TierIIBrochure.pdf" target="_blank">PERS Tier II</a></li>
-      <li><a href="Forms/TRSBrochure.pdf" target="_blank">TRS Tier I: Teachers' Retirement System</a></li>
-      <li><a href="Forms/TRS-TierIIBrochure.pdf" target="_blank">TRS Tier II</a></li>
-      <li><a href="Forms/DSRSBrochure.pdf" target="_blank">DSRS</a></li>
-      <li><a href="Forms/JRSBrochure.pdf" target="_blank">JRS</a></li>
-      <li><a href="Forms/PlanABrochure.pdf" target="_blank">Plan A</a></li>
-      <li><a href="Forms/PlanBbrochure.pdf" target="_blank">Plan B</a></li>
-      <li><a href="Forms/EMSRSBrochure.pdf" target="_blank">EMSRS</a></li>
-      <li><a href="Forms/MPFRSBrochure.pdf" target="_blank">MPFRS</a></li>
-      <li><a href="Forms/NRPORSBrochure.pdf" target="_blank">NRPORS</a></li>
+      <li><a href="forms/PERSbrochure.pdf" target="_blank">PERS Tier I: Public Employees Retirement System</a></li>
+      <li><a href="forms/PERS-TierIIBrochure.pdf" target="_blank">PERS Tier II</a></li>
+      <li><a href="forms/TRSBrochure.pdf" target="_blank">TRS Tier I: Teachers' Retirement System</a></li>
+      <li><a href="forms/TRS-TierIIBrochure.pdf" target="_blank">TRS Tier II</a></li>
+      <li><a href="forms/DSRSBrochure.pdf" target="_blank">DSRS</a></li>
+      <li><a href="forms/JRSBrochure.pdf" target="_blank">JRS</a></li>
+      <li><a href="forms/PlanABrochure.pdf" target="_blank">Plan A</a></li>
+      <li><a href="forms/PlanBbrochure.pdf" target="_blank">Plan B</a></li>
+      <li><a href="forms/EMSRSBrochure.pdf" target="_blank">EMSRS</a></li>
+      <li><a href="forms/MPFRSBrochure.pdf" target="_blank">MPFRS</a></li>
+      <li><a href="forms/NRPORSBrochure.pdf" target="_blank">NRPORS</a></li>
     </ul>
 
     <h2>Newsletters</h2>
     <ul>
-      <li><a href="Forms/2016PERS-PP.pdf" target="_blank">PERS Newsletter (2016)</a></li>
-      <li><a href="Forms/2015TRS-pp.pdf" target="_blank">TRS Newsletter (2015)</a></li>
+      <li><a href="forms/2016PERS-PP.pdf" target="_blank">PERS Newsletter (2016)</a></li>
+      <li><a href="forms/2015TRS-pp.pdf" target="_blank">TRS Newsletter (2015)</a></li>
     </ul>
 
     <p><a href="#publications"><em>Back to top</em></a></p>
@@ -665,7 +665,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
