--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -762,7 +762,7 @@
               <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
               <li><a href="Publications.html#Brochures">Brochures</a></li>
               <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-              <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+              <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
             </ul>
           </li>
         </ul>
@@ -851,7 +851,7 @@
                 </li>
                 <li class="news-item">
                   <p class="news-title">
-                    <a href="Forms/911Cert-2024.pdf" target="_blank">
+                    <a href="forms/911Cert-2024.pdf" target="_blank">
                       911 Transfer Election Results Certification
                     </a>
                   </p>
@@ -926,7 +926,7 @@
               </div>
             </div>
             <p>
-              <a href="Forms/OrgChart.pdf" target="_blank">
+              <a href="forms/OrgChart.pdf" target="_blank">
                 <strong>Download Our Organizational Chart</strong>
               </a>
             </p>
@@ -955,7 +955,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
