--- a/Board-Agenda.html
+++ b/Board-Agenda.html
@@ -387,7 +387,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -501,7 +501,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -546,8 +546,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -581,13 +581,13 @@
       <h2>2025 Annual Meeting Schedule &amp; Agendas</h2>
       <p><strong>(All meetings start at 10:00 A.M. unless noted)</strong></p>
       <ul>
-        <li><strike>Jan 29 2025</strike> – <a href="Forms/Agenda2025-1-29.pdf" target="_blank">Agenda</a></li>
-        <li><strike>Mar 19 2025</strike> – <a href="Forms/Agenda3-19-2025.pdf" target="_blank">Agenda</a></li>
-        <li><strike>May 14 2025</strike> – <a href="Forms/Agenda5-14-2025.pdf" target="_blank">Agenda</a></li>
-        <li><strike>Jul 9 2025</strike> – <a href="Forms/Agenda7-9-2025.pdf" target="_blank">Agenda</a></li>
-        <li>Aug 20 2025 – <a href="Forms/Agenda8-20-2025.pdf" target="_blank">Agenda</a></li>
+        <li><strike>Jan 29 2025</strike> – <a href="forms/Agenda2025-1-29.pdf" target="_blank">Agenda</a></li>
+        <li><strike>Mar 19 2025</strike> – <a href="forms/Agenda3-19-2025.pdf" target="_blank">Agenda</a></li>
+        <li><strike>May 14 2025</strike> – <a href="forms/Agenda5-14-2025.pdf" target="_blank">Agenda</a></li>
+        <li><strike>Jul 9 2025</strike> – <a href="forms/Agenda2025-7-9.pdf" target="_blank">Agenda</a></li>
+        <li>Aug 20 2025 – <a href="forms/Agenda8-20-2025.pdf" target="_blank">Agenda</a></li>
         <li>Oct 8 2025 – Fiduciary Training (Stonewall Resort)</li>
-        <li>Dec 3 2025 – <a href="Forms/Agenda12-3-2025.pdf" target="_blank">Agenda</a></li>
+        <li>Dec 3 2025 – <a href="forms/Agenda12-3-2025.pdf" target="_blank">Agenda</a></li>
       </ul>
       <em>Note: Oct 8 includes morning committee sessions; Board convenes after lunch at Stonewall Resort.</em>
       <h3><p>WV 2025 Legislative Session: Feb 12 &ndash; Mar 12</p></h3>
@@ -604,7 +604,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
