--- a/DSRS-forms.html
+++ b/DSRS-forms.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -570,26 +570,26 @@
     <div class="content-panel">
       <h1>DSRS Forms</h1>
       <ul>
-        <li><a href="Forms/WVAF0010.pdf" target="_blank">Application for Scholarship</a></li>
-        <li><a href="Forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
-        <li><a href="Forms/WVDF0604.pdf" target="_blank">Benefit Estimate Request</a></li>
+        <li><a href="forms/WVAF0010.pdf" target="_blank">Application for Scholarship</a></li>
+        <li><a href="forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
+        <li><a href="forms/WVDF0604.pdf" target="_blank">Benefit Estimate Request</a></li>
         <li><a href="forms/CombinedLiving-Power.pdf" target="_blank">Combined Medical Power of Attorney & Living Will <em>(legal size)</em></a></li>
         <li><a href="forms/ConfidentialRecordsOrder.pdf" target="_blank">Confidential Records Order</a></li>
-        <li><a href="Forms/Employee-of-the-Month-Nomination.pdf" target="_blank">Employee of the Month Nomination Form</a></li>
-        <li><a href="Forms/WVDF0250.pdf" target="_blank">Insurable Interest Affidavit</a></li>
-        <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+        <li><a href="forms/Employee-of-the-Month-Nomination.pdf" target="_blank">Employee of the Month Nomination Form</a></li>
+        <li><a href="forms/WVDF0250.pdf" target="_blank">Insurable Interest Affidavit</a></li>
+        <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         <li><a href="forms/LivingWill.pdf" target="_blank">Living Will <em>(legal size)</em></a></li>
-        <li><a href="Forms/WVAF0172.pdf" target="_blank">Loan Packet for Active Members Hired Prior to July 1 2005</a></li>
+        <li><a href="forms/WVAF0172.pdf" target="_blank">Loan Packet for Active Members Hired Prior to July 1 2005</a></li>
         <li><a href="forms/MedicalPowerofAttorney.pdf" target="_blank">Medical Power of Attorney <em>(legal size)</em></a></li>
-        <li><a href="Forms/WVDF0002.pdf" target="_blank">Membership Enrollment</a></li>
-        <li><a href="Forms/WVAF0002.pdf" target="_blank">Online Self-Service Get Started Guide</a></li>
-        <li><a href="Forms/WVDF0080.pdf" target="_blank">Pre-Retirement Beneficiary Form</a></li>
+        <li><a href="forms/WVDF0002.pdf" target="_blank">Membership Enrollment</a></li>
+        <li><a href="forms/WVAF0002.pdf" target="_blank">Online Self-Service Get Started Guide</a></li>
+        <li><a href="forms/WVDF0080.pdf" target="_blank">Pre-Retirement Beneficiary Form</a></li>
         <li><a href="forms/qdro-dsrs.pdf" target="_blank">Qualified Domestic Relations Order (QDRO)</a></li>
         <li><a href="forms/requestdisability.pdf" target="_blank">Request for Disability Packet</a></li>
-        <li><a href="Forms/Svc-Credit-rollover.pdf" target="_blank">Purchase Permissive Service Credit (Rollover)</a></li>
-        <li><a href="Forms/WVAF0008-2025.pdf" target="_blank">PSO Authorization for Insurance Premium Deduction (2025)</a></li>
-        <li><a href="Forms/WVAF0009.pdf" target="_blank">Retired Public Safety Officer Insurance Carrier (ICA)</a></li>
-        <li><a href="Forms/WV-PoA.pdf" target="_blank">State of WV Statutory Power of Attorney</a></li>
+        <li><a href="forms/Svc-Credit-rollover.pdf" target="_blank">Purchase Permissive Service Credit (Rollover)</a></li>
+        <li><a href="forms/WVAF0008-2025.pdf" target="_blank">PSO Authorization for Insurance Premium Deduction (2025)</a></li>
+        <li><a href="forms/WVAF0009.pdf" target="_blank">Retired Public Safety Officer Insurance Carrier (ICA)</a></li>
+        <li><a href="forms/WV-PoA.pdf" target="_blank">State of WV Statutory Power of Attorney</a></li>
       </ul>
     </div>
   </main>
@@ -604,7 +604,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
