--- a/Employers-Forms.html
+++ b/Employers-Forms.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -572,32 +572,32 @@
       <h1>Employer Forms</h1>
       <ul>
         <li>
-          <a href="Forms/WVTF0015.pdf" target="_blank">
+          <a href="forms/WVTF0015.pdf" target="_blank">
             Critical Need Substitute Teacher Affidavit
           </a>
         </li>
         <li>
-          <a href="Forms/WVTF0016.pdf" target="_blank">
+          <a href="forms/WVTF0016.pdf" target="_blank">
             Critical Need Substitute Bus Operator Affidavit
           </a>
         </li>
         <li>
-          <a href="Forms/WVDF0255.pdf" target="_blank">
+          <a href="forms/WVDF0255.pdf" target="_blank">
             DSRS Return to Covered Employment by Retired Member
           </a>
         </li>
         <li>
-          <a href="Forms/WVAF0006.pdf" target="_blank">
+          <a href="forms/WVAF0006.pdf" target="_blank">
             Less Than Honorable Service
           </a>
         </li>
         <li>
-          <a href="Forms/WVPF0255 PERS Return to Work.pdf" target="_blank">
+          <a href="forms/WVPF0255 PERS Return to Work.pdf" target="_blank">
             PERS Retiree Return to Work as Permanent Part-Time or Temporary Employee
           </a>
         </li>
         <li>
-          <a href="Forms/TRS Return to Work Non Higher Education.pdf" target="_blank">
+          <a href="forms/TRS Return to Work Non Higher Education.pdf" target="_blank">
             TRS Retiree Return to Work for Non-Higher Education Employer
           </a>
         </li>
@@ -615,7 +615,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
