--- a/Employers.html
+++ b/Employers.html
@@ -378,7 +378,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -492,7 +492,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -537,8 +537,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -610,13 +610,13 @@
       </ul>
       <h2>File &amp; Process Guides</h2>
       <ul>
-        <li><a href="Forms/2016COMPASS-EmployerSelfServiceProcessManual.pdf" target="_blank">ESS Process Manual</a></li>
-        <li><a href="Forms/2016COMPASS-Required-FieldsforESS-Users.pdf" target="_blank">Required Fields by System</a></li>
-        <li><a href="Forms/2016COMPASS-EmployerReportingFileFormatGuide.pdf" target="_blank">Reporting File Format Guide</a></li>
-        <li><a href="Forms/2016COMPASS-SecureFileTransfers-SFTP-InstructionGuideforTestFileSubmission.pdf" target="_blank">SFTP Instructions Guide</a></li>
-        <li><a href="Forms/2016COMPASS-Contribution-Groups.pdf" target="_blank">COMPASS Contribution Groups</a></li>
-        <li><a href="Forms/2017lockbox.pdf" target="_blank">Lockbox Payment Guidance</a></li>
-        <li><a href="Forms/DebitAuthorization.pdf" target="_blank">ACH Pre-Authorization Form</a></li>
+        <li><a href="forms/2016COMPASS-EmployerSelfServiceProcessManual.pdf" target="_blank">ESS Process Manual</a></li>
+        <li><a href="forms/2016COMPASS-Required-FieldsforESS-Users.pdf" target="_blank">Required Fields by System</a></li>
+        <li><a href="forms/2016COMPASS-EmployerReportingFileFormatGuide.pdf" target="_blank">Reporting File Format Guide</a></li>
+        <li><a href="forms/2016COMPASS-SecureFileTransfers-SFTP-InstructionGuideforTestFileSubmission.pdf" target="_blank">SFTP Instructions Guide</a></li>
+        <li><a href="forms/2016COMPASS-Contribution-Groups.pdf" target="_blank">COMPASS Contribution Groups</a></li>
+        <li><a href="forms/2017lockbox.pdf" target="_blank">Lockbox Payment Guidance</a></li>
+        <li><a href="forms/DebitAuthorization.pdf" target="_blank">ACH Pre-Authorization Form</a></li>
       </ul>
       <h2>Employer Tutorials</h2>
       <ul>
@@ -643,7 +643,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
