--- a/GASB68-DSRS.html
+++ b/GASB68-DSRS.html
@@ -383,7 +383,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -497,7 +497,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -542,8 +542,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -577,68 +577,68 @@
 
     <h2>2024</h2>
     <ul>
-      <li><a href="Forms/DSRS-2024-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/DSRS-2024-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS-2024-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/DSRS-2024-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2023</h2>
     <ul>
-      <li><a href="Forms/DSRS-2023-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/DSRS-2023-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS-2023-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/DSRS-2023-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2022</h2>
     <ul>
-      <li><a href="Forms/DSRS-2022-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/DSRS-2022-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS-2022-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/DSRS-2022-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2021</h2>
     <ul>
-      <li><a href="Forms/DSRS-2021-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/DSRS-2021-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS-2021-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/DSRS-2021-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2020</h2>
     <ul>
-      <li><a href="Forms/DSRS-2020-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/DSRS-2020-AuditSched.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS-2020-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/DSRS-2020-AuditSched.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2019</h2>
     <ul>
-      <li><a href="Forms/DSRS-2019-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/DSRS-2019-AuditSched.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS-2019-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/DSRS-2019-AuditSched.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2018</h2>
     <ul>
-      <li><a href="Forms/DSRS-2018-AmortPension.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/DSRS-2018-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS-2018-AmortPension.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/DSRS-2018-AuditSch.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2017</h2>
     <ul>
-      <li><a href="Forms/DSRS-2017-ACPSNPL.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/DSRS-2017-GASB68.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS-2017-ACPSNPL.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/DSRS-2017-GASB68.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2016</h2>
     <ul>
-      <li><a href="Forms/DSRS2016ACPSNPL.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/2016DSRS-AllocationSchedules.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS2016ACPSNPL.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/2016DSRS-AllocationSchedules.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2015</h2>
     <ul>
-      <li><a href="Forms/DSRS15EmployerChangeInProportionateShareSchedule.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/2015WVCPRB-DSRSAllocation.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS15EmployerChangeInProportionateShareSchedule.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/2015WVCPRB-DSRSAllocation.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
 
     <h2>2013 – 2014</h2>
     <ul>
-      <li><a href="Forms/DSRS14EmployerChangeInProportionateShareSchedule.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-      <li><a href="Forms/2014-GASB68-DSRS.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
+      <li><a href="forms/DSRS14EmployerChangeInProportionateShareSchedule.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+      <li><a href="forms/2014-GASB68-DSRS.pdf" target="_blank">Audited Schedule of Employer Allocations &amp; Pension Amounts by Employer</a></li>
     </ul>
   </div>
 </main>
@@ -652,7 +652,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
