--- a/GASB68-PlanA.html
+++ b/GASB68-PlanA.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -571,43 +571,43 @@
     <h1>GASB 68 Schedules for Plan A</h1>
     <h2>2024</h2>
     <ul>
-      <li><a href="Forms/PLANA-2024-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2024</a></li>
+      <li><a href="forms/PLANA-2024-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2024</a></li>
     </ul>
     <h2>2023</h2>
     <ul>
-      <li><a href="Forms/PLANA-2023-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2023</a></li>
+      <li><a href="forms/PLANA-2023-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2023</a></li>
     </ul>
     <h2>2022</h2>
     <ul>
-      <li><a href="Forms/DPS-A-2022-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2022</a></li>
+      <li><a href="forms/DPS-A-2022-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2022</a></li>
     </ul>
     <h2>2021</h2>
     <ul>
-      <li><a href="Forms/DPS-A-2021-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2021</a></li>
+      <li><a href="forms/DPS-A-2021-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2021</a></li>
     </ul>
     <h2>2020</h2>
     <ul>
-      <li><a href="Forms/DPS-A-2020-AuditSched.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2020</a></li>
+      <li><a href="forms/DPS-A-2020-AuditSched.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2020</a></li>
     </ul>
     <h2>2019</h2>
     <ul>
-      <li><a href="Forms/DPS-A-2019-AuditSched.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2019</a></li>
+      <li><a href="forms/DPS-A-2019-AuditSched.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2019</a></li>
     </ul>
     <h2>2018</h2>
     <ul>
-      <li><a href="Forms/DPS-A-2018-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2018</a></li>
+      <li><a href="forms/DPS-A-2018-AuditSch.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2018</a></li>
     </ul>
     <h2>2017</h2>
     <ul>
-      <li><a href="Forms/TrooperA-2017-GASB68.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2017</a></li>
+      <li><a href="forms/TrooperA-2017-GASB68.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2017</a></li>
     </ul>
     <h2>2016</h2>
     <ul>
-      <li><a href="Forms/2016PlanA-AllocationSchedules.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2016</a></li>
+      <li><a href="forms/2016PlanA-AllocationSchedules.pdf" target="_blank">Plan A Audit Schedule of Employer Allocations & Pension Amounts – Year Ended June 30, 2016</a></li>
     </ul>
     <h2>2015</h2>
     <ul>
-      <li><a href="Forms/2015WVCPRB-TrooperA-Allocation.pdf" target="_blank">Plan A Audit Schedule of Pension Amounts – Year Ended June 30, 2015</a></li>
+      <li><a href="forms/2015WVCPRB-TrooperA-Allocation.pdf" target="_blank">Plan A Audit Schedule of Pension Amounts – Year Ended June 30, 2015</a></li>
     </ul>
   </div>
 
@@ -621,7 +621,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
