--- a/GASB68-TRS.html
+++ b/GASB68-TRS.html
@@ -326,7 +326,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -440,7 +440,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -485,8 +485,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -520,69 +520,69 @@
 
       <h2>2024</h2>
       <ul>
-        <li><a href="Forms/TRS-2024-Amort.pdf"   target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/TRS-2024-AuditSch.pdf" target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2024</a></li>
+        <li><a href="forms/TRS-2024-Amort.pdf"   target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/TRS-2024-AuditSch.pdf" target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2024</a></li>
       </ul>
 
       <h2>2023</h2>
       <ul>
-        <li><a href="Forms/TRS-2023-Amort.pdf"   target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/TRS-2023-AuditSch.pdf" target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2023</a></li>
+        <li><a href="forms/TRS-2023-Amort.pdf"   target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/TRS-2023-AuditSch.pdf" target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2023</a></li>
       </ul>
 
       <h2>2022</h2>
       <ul>
-        <li><a href="Forms/TRS-2022-Amort.pdf"   target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/TRS-2022-AuditSch.pdf" target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2022</a></li>
+        <li><a href="forms/TRS-2022-Amort.pdf"   target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/TRS-2022-AuditSch.pdf" target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2022</a></li>
       </ul>
 
       <h2>2021</h2>
       <ul>
-        <li><a href="Forms/TRS-2021-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/TRS-2021-AuditSch.pdf"      target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2021</a></li>
+        <li><a href="forms/TRS-2021-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/TRS-2021-AuditSch.pdf"      target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2021</a></li>
       </ul>
 
       <h2>2020</h2>
       <ul>
-        <li><a href="Forms/TRS-2020-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/TRS-2020-AuditSched.pdf"    target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2020</a></li>
+        <li><a href="forms/TRS-2020-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/TRS-2020-AuditSched.pdf"    target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2020</a></li>
       </ul>
 
       <h2>2019</h2>
       <ul>
-        <li><a href="Forms/TRS-2019-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/TRS-2019-AuditSch.pdf"      target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2019</a></li>
+        <li><a href="forms/TRS-2019-GASB68-Amort.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/TRS-2019-AuditSch.pdf"      target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2019</a></li>
       </ul>
 
       <h2>2018</h2>
       <ul>
-        <li><a href="Forms/TRS-2018-AmortPension.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/TRS-2018-AuditSch.pdf"     target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2018</a></li>
+        <li><a href="forms/TRS-2018-AmortPension.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/TRS-2018-AuditSch.pdf"     target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2018</a></li>
       </ul>
 
       <h2>2017</h2>
       <ul>
-        <li><a href="Forms/TRS-2017-ACPSNPL.pdf"     target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/TRS-2017-GASB68.pdf"      target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2017</a></li>
+        <li><a href="forms/TRS-2017-ACPSNPL.pdf"     target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/TRS-2017-GASB68.pdf"      target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2017</a></li>
       </ul>
 
       <h2>2016</h2>
       <ul>
-        <li><a href="Forms/TRS2016-ACPSNPL.pdf"          target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/2016TRS-AllocationSchedules.pdf" target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2016</a></li>
+        <li><a href="forms/TRS2016-ACPSNPL.pdf"          target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/2016TRS-AllocationSchedules.pdf" target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2016</a></li>
       </ul>
 
       <h2>2015</h2>
       <ul>
-        <li><a href="Forms/TRS15EmployerChangeInProportionateShareSchedule.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/2015WVCPRB-TRSAllocation.pdf"                    target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2015</a></li>
+        <li><a href="forms/TRS15EmployerChangeInProportionateShareSchedule.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/2015WVCPRB-TRSAllocation.pdf"                    target="_blank">TRS Audited Schedule of Employer Allocations &amp; Pension Amounts – Year Ended June 30, 2015</a></li>
       </ul>
 
       <h2>2013–2014</h2>
       <ul>
-        <li><a href="Forms/TRS14EmployerChangeInProportionateShareSchedule.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
-        <li><a href="Forms/2014WVCPRB-TRS-RevisedAllocation.pdf"             target="_blank">TRS Audited Schedule … – Year Ended June 30, 2014 (Revised)</a></li>
-        <li><a href="Forms/2014-GASB68-TRS.pdf"                              target="_blank">TRS Audited Schedule … – Years Ended June 30, 2014 & 2013</a></li>
+        <li><a href="forms/TRS14EmployerChangeInProportionateShareSchedule.pdf" target="_blank">Amortization of Change in Proportionate Share of Net Pension Liability</a></li>
+        <li><a href="forms/2014WVCPRB-TRS-RevisedAllocation.pdf"             target="_blank">TRS Audited Schedule … – Year Ended June 30, 2014 (Revised)</a></li>
+        <li><a href="forms/2014-GASB68-TRS.pdf"                              target="_blank">TRS Audited Schedule … – Years Ended June 30, 2014 & 2013</a></li>
       </ul>
     </div>
   </main>
@@ -598,7 +598,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
