--- a/JRS-forms.html
+++ b/JRS-forms.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -571,20 +571,20 @@
     <div class="content-panel">
       <h1>Judges’ Retirement System (JRS) Forms</h1>
       <ul>
-        <li><a href="Forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
-        <li><a href="Forms/CombinedLiving-Power.pdf" target="_blank">Combined Medical Power of Attorney &amp; Living Will</a> <em>(legal size)</em></li>
-        <li><a href="Forms/ConfidentialRecordsOrder.pdf" target="_blank">Confidential Records Order</a></li>
-        <li><a href="Forms/Employee-of-the-Month-Nomination.pdf" target="_blank">Employee of the Month Nomination</a></li>
-        <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
-        <li><a href="Forms/LivingWill.pdf" target="_blank">Living Will</a> <em>(legal size)</em></li>
-        <li><a href="Forms/MedicalPowerofAttorney.pdf" target="_blank">Medical Power of Attorney</a> <em>(legal size)</em></li>
-        <li><a href="Forms/WVJF0002.pdf" target="_blank">Membership Enrollment</a></li>
-        <li><a href="Forms/WVAF0002.pdf" target="_blank">Online Self-Service Get-Started Guide</a></li>
-        <li><a href="Forms/qdro-jrs.pdf" target="_blank">Qualified Domestic Relations Order (QDRO)</a></li>
-        <li><a href="Forms/Svc-Credit-rollover.pdf" target="_blank">Purchase of Permissive Service Credit (Rollover)</a></li>
-        <li><a href="Forms/WVAF0008-2025.pdf" target="_blank">Retired Public Safety Officer Premium Deduction (PSOA-2025)</a></li>
-        <li><a href="Forms/WVAF0009.pdf" target="_blank">Insurance Carrier Authorization (ICA)</a></li>
-        <li><a href="Forms/WV-PoA.pdf" target="_blank">WV Statutory Power of Attorney</a></li>
+        <li><a href="forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
+        <li><a href="forms/CombinedLiving-Power.pdf" target="_blank">Combined Medical Power of Attorney &amp; Living Will</a> <em>(legal size)</em></li>
+        <li><a href="forms/ConfidentialRecordsOrder.pdf" target="_blank">Confidential Records Order</a></li>
+        <li><a href="forms/Employee-of-the-Month-Nomination.pdf" target="_blank">Employee of the Month Nomination</a></li>
+        <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+        <li><a href="forms/LivingWill.pdf" target="_blank">Living Will</a> <em>(legal size)</em></li>
+        <li><a href="forms/MedicalPowerofAttorney.pdf" target="_blank">Medical Power of Attorney</a> <em>(legal size)</em></li>
+        <li><a href="forms/WVJF0002.pdf" target="_blank">Membership Enrollment</a></li>
+        <li><a href="forms/WVAF0002.pdf" target="_blank">Online Self-Service Get-Started Guide</a></li>
+        <li><a href="forms/qdro-jrs.pdf" target="_blank">Qualified Domestic Relations Order (QDRO)</a></li>
+        <li><a href="forms/Svc-Credit-rollover.pdf" target="_blank">Purchase of Permissive Service Credit (Rollover)</a></li>
+        <li><a href="forms/WVAF0008-2025.pdf" target="_blank">Retired Public Safety Officer Premium Deduction (PSOA-2025)</a></li>
+        <li><a href="forms/WVAF0009.pdf" target="_blank">Insurance Carrier Authorization (ICA)</a></li>
+        <li><a href="forms/WV-PoA.pdf" target="_blank">WV Statutory Power of Attorney</a></li>
       </ul>
     </div>
   </main>
@@ -599,7 +599,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
