--- a/MPFRS-forms.html
+++ b/MPFRS-forms.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -571,20 +571,20 @@
   <div class="content-panel">
     <h1>Municipal Police Officers &amp; Firefighters Retirement System (MPFRS) Forms</h1>
     <ul>
-      <b><li><a href="Forms/WVAF0010.pdf" target="_blank">Application for Scholarship</a></li>
-      <li><a href="Forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
-      <li><a href="Forms/WVMF0606.pdf" target="_blank">Benefit Estimate Request</a></li>
-      <li><a href="Forms/WVMF0002.pdf" target="_blank">Membership Enrollment Form</a></li>
-      <li><a href="Forms/WVMF0250.pdf" target="_blank">Insurable Interest Affidavit</a></li>
-      <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
-      <li><a href="Forms/WVAF0002.pdf" target="_blank">Online Self-Service Get Started Guide</a></li>
-      <li><a href="Forms/WVMF0080.pdf" target="_blank">Pre-retirement Beneficiary Form</a></li>
-      <li><a href="Forms/QDRO-MPFRS.pdf" target="_blank">Qualified Domestic Relations Order (QDRO)</a></li>
+      <b><li><a href="forms/WVAF0010.pdf" target="_blank">Application for Scholarship</a></li>
+      <li><a href="forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
+      <li><a href="forms/WVMF0606.pdf" target="_blank">Benefit Estimate Request</a></li>
+      <li><a href="forms/WVMF0002.pdf" target="_blank">Membership Enrollment Form</a></li>
+      <li><a href="forms/WVMF0250.pdf" target="_blank">Insurable Interest Affidavit</a></li>
+      <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+      <li><a href="forms/WVAF0002.pdf" target="_blank">Online Self-Service Get Started Guide</a></li>
+      <li><a href="forms/WVMF0080.pdf" target="_blank">Pre-retirement Beneficiary Form</a></li>
+      <li><a href="forms/QDRO-MPFRS.pdf" target="_blank">Qualified Domestic Relations Order (QDRO)</a></li>
       <li><a href="forms/requestdisability.pdf" target="_blank">Request for Disability Packet</a></li>
-      <li><a href="Forms/Svc-Credit-rollover.pdf" target="_blank">Permissive Service Credit Rollover</a></li>
-      <li><a href="Forms/WVAF0008-2025.pdf" target="_blank">PSOA-2025 Insurance Premium Deduction</a></li>
-      <li><a href="Forms/WVAF0009.pdf" target="_blank">Insurance Carrier Authorization (ICA)</a></li>
-      <li><a href="Forms/WV-PoA.pdf" target="_blank">WV Statutory Power of Attorney</a></li>
+      <li><a href="forms/Svc-Credit-rollover.pdf" target="_blank">Permissive Service Credit Rollover</a></li>
+      <li><a href="forms/WVAF0008-2025.pdf" target="_blank">PSOA-2025 Insurance Premium Deduction</a></li>
+      <li><a href="forms/WVAF0009.pdf" target="_blank">Insurance Carrier Authorization (ICA)</a></li>
+      <li><a href="forms/WV-PoA.pdf" target="_blank">WV Statutory Power of Attorney</a></li>
     </ul>
   </div>
   </main>
@@ -599,7 +599,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
