--- a/PlanA-forms.html
+++ b/PlanA-forms.html
@@ -377,7 +377,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -491,7 +491,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -536,8 +536,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -570,21 +570,21 @@
     <h1>Trooper Plan A: Forms</h1>
     <h3 class="style12" style="color:#600;">The West Virginia State Police Death, Disability and Retirement Fund (Plan A) Forms</h3>
     <ul>
-      <li><a href="Forms/WVAF0010.pdf" target="_blank">Application for Scholarship</a></li>
-      <li><a href="Forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
-      <li><a href="Forms/WVSPAF0602.pdf" target="_blank">Benefit Estimate Request</a></li>
+      <li><a href="forms/WVAF0010.pdf" target="_blank">Application for Scholarship</a></li>
+      <li><a href="forms/WVAF0005.pdf" target="_blank">Authorization to Release Information</a></li>
+      <li><a href="forms/WVSPAF0602.pdf" target="_blank">Benefit Estimate Request</a></li>
       <li><a href="forms/CombinedLiving-Power.pdf" target="_blank">Combined Medical Power of Attorney and Living Will</a> <em>(print on legal size paper)</em></li>
       <li><a href="forms/ConfidentialRecordsOrder.pdf" target="_blank">Confidential Records Order</a></li>
-      <li><a href="Forms/WVSPF0088.pdf" target="_blank">Disability Recertification Policy</a></li>
-      <li><a href="Forms/Employee-of-the-Month-Nomination.pdf" target="_blank" style="color:#336600; font-weight:bold; font-style:italic;">Employee of the Month Nomination Form</a></li>
-      <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+      <li><a href="forms/WVSPF0088.pdf" target="_blank">Disability Recertification Policy</a></li>
+      <li><a href="forms/Employee-of-the-Month-Nomination.pdf" target="_blank" style="color:#336600; font-weight:bold; font-style:italic;">Employee of the Month Nomination Form</a></li>
+      <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
       <li><a href="forms/LivingWill.pdf" target="_blank">Living Will</a> <em>(print on legal size paper)</em></li>
       <li><a href="forms/MedicalPowerofAttorney.pdf" target="_blank">Medical Power of Attorney</a> <em>(print on legal size paper)</em></li>
-      <li><a href="Forms/WVAF0002.pdf" target="_blank">Online Self-Service Get Started Guide</a></li>
+      <li><a href="forms/WVAF0002.pdf" target="_blank">Online Self-Service Get Started Guide</a></li>
       <li><a href="forms/qdro-troopera.pdf" target="_blank">Qualified Domestic Relations Order (QDRO)</a></li>
-      <li><a href="Forms/WVAF0008-2025.pdf" target="_blank">Retired Public Safety Officer Authorization for Insurance Premium Deduction (PSOA-2025)</a></li>
-      <li><a href="Forms/WVAF0009.pdf" target="_blank">Retired Public Safety Officer Insurance Carrier (ICA)</a></li>
-      <li><a href="Forms/WV-PoA.pdf" target="_blank">State of West Virginia Statutory Form Power of Attorney</a></li>
+      <li><a href="forms/WVAF0008-2025.pdf" target="_blank">Retired Public Safety Officer Authorization for Insurance Premium Deduction (PSOA-2025)</a></li>
+      <li><a href="forms/WVAF0009.pdf" target="_blank">Retired Public Safety Officer Insurance Carrier (ICA)</a></li>
+      <li><a href="forms/WV-PoA.pdf" target="_blank">State of West Virginia Statutory Form Power of Attorney</a></li>
     </ul>
   </div>
 </main>
@@ -598,7 +598,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
