--- a/PlanB-forms.html
+++ b/PlanB-forms.html
@@ -377,7 +377,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -491,7 +491,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -536,8 +536,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -570,25 +570,25 @@
       <h1>West Virginia State Police Retirement System (Plan B)</h1>
       <h2>Forms &amp; Documents</h2>
       <ul>
-        <li><a href="Forms/WVAF0010.pdf" target="_blank" rel="noopener noreferrer">Application for Scholarship</a></li>
-        <li><a href="Forms/WVAF0005.pdf" target="_blank" rel="noopener noreferrer">Authorization to Release Information</a></li>
-        <li><a href="Forms/WVSPBF0602.pdf" target="_blank" rel="noopener noreferrer">Benefit Estimate Request</a></li>
+        <li><a href="forms/WVAF0010.pdf" target="_blank" rel="noopener noreferrer">Application for Scholarship</a></li>
+        <li><a href="forms/WVAF0005.pdf" target="_blank" rel="noopener noreferrer">Authorization to Release Information</a></li>
+        <li><a href="forms/WVSPBF0602.pdf" target="_blank" rel="noopener noreferrer">Benefit Estimate Request</a></li>
         <li><a href="forms/CombinedLiving-Power.pdf" target="_blank" rel="noopener noreferrer">Combined Medical Power of Attorney and Living Will</a> <em>(print on legal size paper)</em></li>
         <li><a href="forms/ConfidentialRecordsOrder.pdf" target="_blank" rel="noopener noreferrer">Confidential Records Order</a></li>
-        <li><a href="Forms/WVSPF0088.pdf" target="_blank" rel="noopener noreferrer">Disability Recertification Policy</a></li>
-        <li><a href="Forms/Employee-of-the-Month-Nomination.pdf" target="_blank" rel="noopener noreferrer">Employee of the Month Nomination Form</a></li>
-        <li><a href="Forms/WVAF0006.pdf" target="_blank" rel="noopener noreferrer">Less Than Honorable Service</a></li>
+        <li><a href="forms/WVSPF0088.pdf" target="_blank" rel="noopener noreferrer">Disability Recertification Policy</a></li>
+        <li><a href="forms/Employee-of-the-Month-Nomination.pdf" target="_blank" rel="noopener noreferrer">Employee of the Month Nomination Form</a></li>
+        <li><a href="forms/WVAF0006.pdf" target="_blank" rel="noopener noreferrer">Less Than Honorable Service</a></li>
         <li><a href="forms/LivingWill.pdf" target="_blank" rel="noopener noreferrer">Living Will</a> <em>(print on legal size paper)</em></li>
         <li><a href="forms/MedicalPowerofAttorney.pdf" target="_blank" rel="noopener noreferrer">Medical Power of Attorney</a> <em>(print on legal size paper)</em></li>
-        <li><a href="Forms/WVSPBF0002.pdf" target="_blank" rel="noopener noreferrer">Membership Enrollment</a></li>
-        <li><a href="Forms/WVAF0002.pdf" target="_blank" rel="noopener noreferrer">Online Self-Service Get Started Guide</a></li>
-        <li><a href="Forms/WVSPBF0080.pdf" target="_blank" rel="noopener noreferrer">Pre-Retirement Beneficiary Designation</a></li>
+        <li><a href="forms/WVSPBF0002.pdf" target="_blank" rel="noopener noreferrer">Membership Enrollment</a></li>
+        <li><a href="forms/WVAF0002.pdf" target="_blank" rel="noopener noreferrer">Online Self-Service Get Started Guide</a></li>
+        <li><a href="forms/WVSPBF0080.pdf" target="_blank" rel="noopener noreferrer">Pre-Retirement Beneficiary Designation</a></li>
         <li><a href="forms/qdro-trooperb.pdf" target="_blank" rel="noopener noreferrer">Qualified Domestic Relations Order (QDRO)</a></li>
         <li><a href="forms/requestdisability.pdf" target="_blank" rel="noopener noreferrer">Request for Disability Packet</a></li>
-        <li><a href="Forms/Svc-Credit-rollover.pdf" target="_blank" rel="noopener noreferrer">Request to Purchase Permissive Service Credit (Rollover)</a></li>
-        <li><a href="Forms/WVAF0008-2025.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Authorization for Insurance Premium Deduction (PSOA-2025)</a></li>
-        <li><a href="Forms/WVAF0009.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Insurance Carrier (ICA)</a></li>
-        <li><a href="Forms/WV-PoA.pdf" target="_blank" rel="noopener noreferrer">State of West Virginia Statutory Form Power of Attorney</a></li>
+        <li><a href="forms/Svc-Credit-rollover.pdf" target="_blank" rel="noopener noreferrer">Request to Purchase Permissive Service Credit (Rollover)</a></li>
+        <li><a href="forms/WVAF0008-2025.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Authorization for Insurance Premium Deduction (PSOA-2025)</a></li>
+        <li><a href="forms/WVAF0009.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Insurance Carrier (ICA)</a></li>
+        <li><a href="forms/WV-PoA.pdf" target="_blank" rel="noopener noreferrer">State of West Virginia Statutory Form Power of Attorney</a></li>
       </ul>
     </section>
   </main>
@@ -604,7 +604,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
