--- a/Retirees.html
+++ b/Retirees.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -570,7 +570,7 @@
   <section class="content-panel" id="retirees">
     <h1>Retirees</h1>
 
-    <p><b>Welcome! Below you’ll find useful resources and forms tailored for retirees.</p></b>
+    <p><b>Welcome! Below you’ll find useful resources and forms tailored for retirees.</b></p>
 
     <div class="portal-link">
       <a
@@ -586,34 +586,34 @@
 
     <ul>
       <li>
-        <a href="Forms/2017RetSelfServ.pdf" target="_blank" rel="noopener noreferrer">Retiree Self-Service - Quick Guide</a>
+        <a href="forms/2017RetSelfServ.pdf" target="_blank" rel="noopener noreferrer">Retiree Self-Service - Quick Guide</a>
       </li>
       <li>
         <a href="RetireeSelfService.html">Retiree Self Service Tutorial Video</a>
       </li>
       <li>
-        <a href="Forms/2025RetCal.pdf" target="_blank" rel="noopener noreferrer">2025 Calendar for Direct Deposit Dates</a>
+        <a href="forms/2025RetCal.pdf" target="_blank" rel="noopener noreferrer">2025 Calendar for Direct Deposit Dates</a>
       </li>
       <li>
-        <a href="Forms/WVDF0255.pdf" target="_blank" rel="noopener noreferrer">DSRS Return to Covered Employment by Retired Member</a>
+        <a href="forms/WVDF0255.pdf" target="_blank" rel="noopener noreferrer">DSRS Return to Covered Employment by Retired Member</a>
       </li>
       <li>
-        <a href="Forms/WVPF0255 PERS Return to Work.pdf" target="_blank" rel="noopener noreferrer">PERS Retiree Return to Work as Permanent Part-Time or Temporary Employee</a>
+        <a href="forms/PERS-ReturnToWork.pdf" target="_blank" rel="noopener noreferrer">PERS Retiree Return to Work as Permanent Part-Time or Temporary Employee</a>
       </li>
       <li>
-        <a href="Forms/TRS Return to Work Non Higher Education.pdf" target="_blank" rel="noopener noreferrer">TRS Retiree Return to Work for Non-Higher Education Employer</a>
+        <a href="forms/TRS-ReturnToWork.pdf" target="_blank" rel="noopener noreferrer">TRS Retiree Return to Work for Non-Higher Education Employer</a>
       </li>
       <li>
-        <a href="Forms/WVAF0005.pdf" target="_blank" rel="noopener noreferrer">Authorization to Release Information</a>
+        <a href="forms/WVAF0005.pdf" target="_blank" rel="noopener noreferrer">Authorization to Release Information</a>
       </li>
       <li>
         <a href="forms/CombinedLiving-Power.pdf" target="_blank" rel="noopener noreferrer">Combined Medical Power of Attorney and Living Will</a> <em>(print on legal size paper)</em>
       </li>
       <li>
-        <a href="Forms/fw4p.pdf" target="_blank" rel="noopener noreferrer">Form to Change Federal Withholdings</a>
+        <a href="forms/fw4p.pdf" target="_blank" rel="noopener noreferrer">Form to Change Federal Withholdings</a>
       </li>
       <li>
-        <a href="Forms/WVAF0004.pdf" target="_blank" rel="noopener noreferrer">Form to Change State Withholdings</a>
+        <a href="forms/WVAF0004.pdf" target="_blank" rel="noopener noreferrer">Form to Change State Withholdings</a>
       </li>
       <li>
         <a href="forms/LivingWill.pdf" target="_blank" rel="noopener noreferrer">Living Will</a> <em>(print on legal size paper)</em>
@@ -622,14 +622,14 @@
         <a href="forms/MedicalPowerofAttorney.pdf" target="_blank" rel="noopener noreferrer">Medical Power of Attorney</a> <em>(print on legal size paper)</em>
       </li>
       <li>
-        <a href="Forms/WVAF0008-2025.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Authorization for Insurance Premium Deduction (PSOA-2025)</a>
+        <a href="forms/WVAF0008-2025.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Authorization for Insurance Premium Deduction (PSOA-2025)</a>
       </li>
       <li>
-        <a href="Forms/WVAF0009.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Insurance Carrier (ICA)</a>
+        <a href="forms/WVAF0009.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Insurance Carrier (ICA)</a>
       </li>
     </ul>
   </section>
-</main>  <!-- STICKY FOOTER AT THE BOTTOM -->
+</main> 
   <!-- FOOTER -->
   <footer class="footer">
   <div class="footer-container">
@@ -639,7 +639,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
