--- a/TDC-QI.html
+++ b/TDC-QI.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -574,15 +574,15 @@
     <ul class="review-list">
       <li><strong>2014</strong>
         <ul>
-          <li><a href="Forms/TDC1Q2014.pdf" target="_blank">3-31-2014 Quarterly Investment Review</a></li>
-          <li><a href="Forms/TDC-IR2Q2014.pdf" target="_blank">6-30-2014 Quarterly Investment Review</a></li>
-          <li><a href="Forms/TDC-IR3Q2014.pdf" target="_blank">9-30-2014 Quarterly Investment Review</a></li>
+          <li><a href="forms/TDC1Q2014.pdf" target="_blank">3-31-2014 Quarterly Investment Review</a></li>
+          <li><a href="forms/TDC-IR2Q2014.pdf" target="_blank">6-30-2014 Quarterly Investment Review</a></li>
+          <li><a href="forms/TDC-IR3Q2014.pdf" target="_blank">9-30-2014 Quarterly Investment Review</a></li>
         </ul>
       </li>
       <li><strong>2013</strong>
         <ul>
-          <li><a href="Forms/TDC-3Q2013.pdf" target="_blank">9-30-2013 Quarterly Investment Review</a></li>
-          <li><a href="Forms/TDC4Q2013.pdf" target="_blank">12-31-2013 Quarterly Investment Review</a></li>
+          <li><a href="forms/TDC-3Q2013.pdf" target="_blank">9-30-2013 Quarterly Investment Review</a></li>
+          <li><a href="forms/TDC4Q2013.pdf" target="_blank">12-31-2013 Quarterly Investment Review</a></li>
         </ul>
       </li>
     </ul>
@@ -603,7 +603,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
