--- a/TDC-forms.html
+++ b/TDC-forms.html
@@ -379,7 +379,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
         </ul>
       </li>
     </ul>
@@ -493,7 +493,7 @@
             <li><a href="Publications.html#Summary">Plan Summary Sheet</a></li>
             <li><a href="Publications.html#Brochures">Brochures</a></li>
             <li><a href="Publications.html#Newsletters">Newsletters</a></li>
-            <li><a href="Forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
+            <li><a href="forms/OrgChart.pdf" target="_blank">Organizational Chart</a></li>
           </ul>
         </li>
       </ul>
@@ -538,8 +538,8 @@
           <li><a href="https://mywvretirement.wv.gov/Common/Pages/Login.aspx?retiree=true" target="_blank">Retiree Self Service Portal</a></li>
           <li><a href="Retirees.html">Retiree Forms</a></li>
           <li><a href="Contact.html#Retirement">Contact Annuity Benefits</a></li>
-          <li><a href="Forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
-          <li><a href="Forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
+          <li><a href="forms/WVDF0255.pdf" target="_blank">DSRS Return to Covered Employment</a></li>
+          <li><a href="forms/WVAF0006.pdf" target="_blank">Less Than Honorable Service</a></li>
         </ul>
       </div>
       <div class="mega-column">
@@ -570,8 +570,8 @@
   <section class="content-panel" id="TDC-forms">
     <h1>Teachers’ Defined Contribution Retirement System (TDC Plan) Forms</h1>
     <ul>
-      <li><a href="Forms/WVAF0005.pdf"   target="_blank">Authorization to Release Information</a></li>
-      <li><a href="Forms/TDCbene.pdf"     target="_blank">Beneficiary Designation</a></li>
+      <li><a href="forms/WVAF0005.pdf"   target="_blank">Authorization to Release Information</a></li>
+      <li><a href="forms/TDCbene.pdf"     target="_blank">Beneficiary Designation</a></li>
       <li>
         <a href="forms/CombinedLiving-Power.pdf" target="_blank">
           Combined Medical Power of Attorney &amp; Living Will
@@ -581,10 +581,10 @@
       <li><a href="forms/ConfidentialRecordsOrder.pdf" target="_blank">
         Confidential Records Order
       </a></li>
-      <li><a href="Forms/Employee-of-the-Month-Nomination.pdf" target="_blank">
+      <li><a href="forms/Employee-of-the-Month-Nomination.pdf" target="_blank">
         Employee of the Month Nomination Form
       </a></li>
-      <li><a href="Forms/WVAF0006.pdf"   target="_blank">Less Than Honorable Service</a></li>
+      <li><a href="forms/WVAF0006.pdf"   target="_blank">Less Than Honorable Service</a></li>
       <li>
         <a href="forms/LivingWill.pdf" target="_blank">Living Will</a>
         <small>(print on legal size paper)</small>
@@ -604,7 +604,7 @@
       <li><a href="forms/requestdisability.pdf" target="_blank">
         Request for Disability Retirement Packet
       </a></li>
-      <li><a href="Forms/WV-PoA.pdf" target="_blank">
+      <li><a href="forms/WV-PoA.pdf" target="_blank">
         State of West Virginia Statutory Form Power of Attorney
       </a></li>
     </ul>
@@ -626,7 +626,7 @@
       for general guidance only. In the event of any discrepancy between this site and
       the WV Code & Rules, the Code & Rules prevail. |
       <a href="PrivacyPolicy.html">Privacy Policy Notice</a> |
-      <a href="mailto:cprb.noreply@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
+            <a href="mailto:cprbadminit@wv.gov?subject=%20Issue%20Report">Report An Issue</a>
     </div>
   </div>
 </footer>
